--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,15 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    needs: release
     steps:
     - uses: actions/checkout@v2
     - run: |
+        git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*    
+    - run: |
         git checkout -b ${GITHUB_REF##*/}-dist
+        git rm -rf .
+    - uses: actions/download-artifact@v1
+      with:
+        name: dist
+        path: ${GITHUB_WORKSPACE}      
