--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: release
+    needs: build
     steps:
     - uses: actions/checkout@v2
     - run: |
