create dist branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,13 @@ jobs:
     - run: npm install
     - run: npm run package
     - run: |
-        mkdir -p ${HOME}/action_content
-        cp action.yml ${HOME}/action_content/action.yml
-        cp -r dist ${HOME}/action_content/
+        mkdir -p /tmp/action_content
+        cp action.yml /tmp/action_content/action.yml
+        cp -r dist /tmp/action_content/
     - name: upload the action content
       uses: actions/upload-artifact@v1
       with:
-        path: "${{build.env.HOME}}/action_content"
+        path: "/tmp/action_content"
         name: "dist"
 
   publish:
