--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,7 @@ jobs:
     - uses: actions/download-artifact@v1
       with:
         name: dist
-        path: ${GITHUB_WORKSPACE}      
+        path: ${GITHUB_WORKSPACE}
+    - run: |
+        git add .
+        git commit -m "Update Build Artefacts"
