--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,4 @@ jobs:
     - run: |
         git add .
         git commit -m "Update Build Artefacts"
-        git push --all origin
+        git push origin ${GITHUB_REF##*/}-dist --force
