--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
     - run: |
-        git checkout -b ${{github.event.ref}}-dist
+        git checkout -b ${GITHUB_REF##*/}-dist
         git rm -rf .
     - uses: actions/download-artifact@v1
       with:
@@ -44,4 +44,4 @@ jobs:
     - run: |
         git add .
         git commit -m "Update Build Artefacts"
-        git push origin ${{github.event.ref}}-dist --force
+        git push origin ${GITHUB_REF##*/}-dist --force
