renamed branch var

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v2
+    - run: echo "${{ toJson(github.event) }}"
     - run: |
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
     - name: configure git
