--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,14 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v2
+    - uses: frabert/replace-string-action@v1.1
+      id: replace
+      with:
+        pattern: 'Hello, (\w+)!'
+        string: 'Hello, world!'
+        replace-with: 'I greet you, $1!'
     - run: echo "${{ toJson(github.event) }}"
+    - run: echo "${{ step.replace.outputs.replaced }}"
     - run: |
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
     - name: configure git
