using plain ref

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -11,11 +11,11 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-    - uses: frabert/replace-string-action@v1.1
-      id: generate_branch_name
-      with:
-        pattern: 'refs/heads/(.*)'
-        string: "${{ github.event.ref }}"
-        replace-with: '$1-dist'
+#    - uses: frabert/replace-string-action@v1.1
+#      id: generate_branch_name
+#      with:
+#        pattern: 'refs/heads/(.*)'
+#        string: "${{ github.event.ref }}"
+#        replace-with: '$1-dist'
     - run: |
-        git push origin --delete ${{ steps.generate_branch_name.outputs.replaced }}
+        git push origin --delete ${{ github.event.ref }}-dist
