--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   clean:
     runs-on: ubuntu-latest
-    if: !endsWith(github.event.ref,'-dist')
+    if: endsWith(github.event.ref,'-dist') != true
     steps:
     - uses: actions/checkout@v2
     - name: configure git
