--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,11 +7,9 @@ serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
-[bumpversion:file:Chart.yaml]
+[bumpversion:file:package.json]
 search = "version":"{current_version}"
 replace = "version":"{new_version}"
-
-[bumpversion:file:README.md]
 
 [bumpversion:part:release]
 optional_value = gamma
