--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -8,8 +8,8 @@ serialize =
 	{major}.{minor}.{patch}
 
 [bumpversion:file:package.json]
-search = "version":"{current_version}"
-replace = "version":"{new_version}"
+search = \"version\":\"{current_version}\"
+replace = \"version\":\"{new_version}\"
 
 [bumpversion:part:release]
 optional_value = gamma
