--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.0-dev
+current_version = 0.1.0
 commit = false
 tag = false
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
@@ -8,8 +8,8 @@ serialize =
 	{major}.{minor}.{patch}
 
 [bumpversion:file:package.json]
-search = \"version\":\"{current_version}\"
-replace = \"version\":\"{new_version}\"
+search = "version":"{current_version}"
+replace = "{new_version}"
 
 [bumpversion:part:release]
 optional_value = gamma
