--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,7 +9,7 @@ serialize =
 
 [bumpversion:file:package.json]
 search = "version":"{current_version}"
-replace = "{new_version}"
+replace = {new_version}
 
 [bumpversion:part:release]
 optional_value = gamma
