--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "version": "0.1.0-dev",
+    "teste": "0.1.0-dev",
     "private": true,
     "dependencies": {
         "@actions/core": "^1.2.0",
