--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.1.0-dev
 commit = false
 tag = false
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
@@ -7,9 +7,11 @@ serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
-[bumpversion:file:package.json]
-search = "version":"{current_version}"
-replace = {new_version}
+[bumpversion:file:version.txt]
+
+#[bumpversion:file:package.json]
+#search = "version":"{current_version}"
+#replace = {new_version}
 
 [bumpversion:part:release]
 optional_value = gamma
