--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -21,13 +21,7 @@ jobs:
         id: packagejson
         uses: traversals-analytics-and-intelligence/file-reader-action@master
         with:
-          file: ./package.json
-      - id: packagejson_version
-        uses: gr2m/get-json-paths-action@v1.x
-        with:
-          json: ${{ steps.packagejson.outputs.content }}
-          version: "version"
-      - run: "echo bar is ${{ steps.packagejson_version.outputs.version }}"
+          file: ./version.txt
 
       - uses: actions/setup-python@v1
       - name: set PY
@@ -36,39 +30,32 @@ jobs:
       - name: set release version
         uses: nolte/github-action/utils/bump2version@feature/shasum
         with:
-          currentVersion: "${{ steps.packagejson_version.outputs.version }}"
+          currentVersion: "${ steps.packagejson.outputs.content }}"
           part: release
 
       - name: Read template from file
         id: packagejson_release
         uses: traversals-analytics-and-intelligence/file-reader-action@master
         with:
-          file: ./package.json
-      - id: packagejson_version_release
-        uses: gr2m/get-json-paths-action@v1.x
-        with:
-          json: ${{ steps.packagejson_release.outputs.content }}
-          version: version
-      - run: "echo bar is ${{ steps.packagejson_version_release.outputs.version }}"
-
+          file: ./version.txt
 
       - name: Commit files
         run: |
-          git commit -m "Update to Release Version ${{ steps.packagejson_version_release.outputs.version }} close Milestone ${{ github.event.milestone.title }}" -a
-          git checkout -b release/rc-${{ steps.packagejson_version_release.outputs.version }}
+          git commit -m "Update to Release Version ${{ steps.packagejson_release.outputs.content }} close Milestone ${{ github.event.milestone.title }}" -a
+          git checkout -b release/rc-${{ steps.packagejson_release.outputs.content }}
           git checkout develop
 
       - name: update to next develop version
         uses: nolte/github-action/utils/bump2version@feature/shasum
         with:
-          currentVersion: "${{ steps.packagejson_version_release.outputs.version }}"
+          currentVersion: "${{ steps.packagejson_release.outputs.content }}"
           part: minor
 
       - name: Read template from file
         id: packagejson_next_dev
         uses: traversals-analytics-and-intelligence/file-reader-action@master
         with:
-          file: ./package.json
+          file: ./version.txt
       - id: packagejson_version_next_dev
         uses: gr2m/get-json-paths-action@v1.x
         with:
@@ -78,7 +65,7 @@ jobs:
 
       - name: Commit files
         run: |
-          git commit -m "Update to next Develop Version ${{ steps.packagejson_version_next_dev.outputs.version }}" -a
+          git commit -m "Update to next Develop Version ${{ steps.packagejson_next_dev.outputs.content }}" -a
           git push --all origin
 
       - name: Initialize Pull Request
@@ -86,9 +73,9 @@ jobs:
         id: pull_request_release_master
         with:
           pull_request_token: ${{ secrets.GITHUB_TOKEN }}
-          head: release/rc-${{ steps.packagejson_version_release.outputs.version }}
+          head: release/rc-${{ steps.packagejson_next_dev.outputs.content }}
           base: master
-          title: 'Update master to Latest Release ${{ steps.packagejson_version_release.outputs.version }}'
+          title: 'Update master to Latest Release ${{ steps.packagejson_next_dev.outputs.content }}'
           mileStoneNumber: "${{ github.event.milestone.number }}"
           labels: "automerge, release"
           body: >
@@ -118,7 +105,7 @@ jobs:
         id: packagejson
         uses: traversals-analytics-and-intelligence/file-reader-action@master
         with:
-          file: ./package.json
+          file: ./version.txt
       - id: packagejson_version
         uses: gr2m/get-json-paths-action@v1.x
         with:
@@ -158,8 +145,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.packagejson_version.outputs.version }}
-          release_name: Release v${{ steps.packagejson_version.outputs.version }}
+          tag_name: v${{ steps.packagejson.outputs.content  }}
+          release_name: Release v${{ steps.packagejson.outputs.content }}
           draft: false
           prerelease: true
           body: |
@@ -185,16 +172,11 @@ jobs:
         id: packagejson
         uses: traversals-analytics-and-intelligence/file-reader-action@master
         with:
-          file: ./package.json
-      - id: packagejson_version
-        uses: gr2m/get-json-paths-action@v1.x
-        with:
-          json: ${{ steps.packagejson.outputs.content }}
-          version: "version"
-      - run: "echo bar is ${{ steps.packagejson_version.outputs.version }}"
+          file: ./version.txt
+
       - name: Create Milestone
         uses: "nolte/github-action-create-milestone@fix/parsing_title_with_version"
         with:
-           title: "Release ${{ steps.packagejson_version.outputs.version }}"
+           title: "Release ${{ steps.packagejson.outputs.content }}"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
