--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -101,6 +101,8 @@ jobs:
         with:
           file: ./version.txt
 
+
+      - run: mkdir -p .dist
       - name: Create Release Notes
         uses: docker://decathlon/release-notes-generator-action:2.0.1
         env:
