--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -133,6 +133,85 @@ jobs:
             ---
             ${{ steps.releasenodes.outputs.text }}
 
+      - name: Upload the release version txt
+        uses: actions/upload-artifact@v1
+        with:
+          name: release_version
+          path: version.txt
+
+
+  createrealeasedist:
+    name: generate relase items
+    runs-on: ubuntu-latest
+    needs: creatghrelease
+    steps:
+
+      - run:   echo ::set-env name=HOME::$HOME
+        shell: bash
+      - name: Download math result for job 1
+        uses: actions/download-artifact@v1
+        with:
+          name: release_version
+          path: ${{ env.HOME }}/release
+
+      - name: set PY
+        id: readfile
+        run: echo "::set-env release_version=$(cat ${{ env.HOME }}/release/version.txt)"
+
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          ref: tags/v${{ env.release_version }}
+
+      # generate the nodejs release dist content
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: npm install
+      - run: npm run package
+      - run: |
+          mkdir -p /tmp/action_content
+          cp action.yml /tmp/action_content/action.yml
+          cp -r dist /tmp/action_content/
+      - name: upload the action content
+        uses: actions/upload-artifact@v1
+        with:
+          path: "/tmp/action_content"
+          name: "dist"
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: createrealeasedist
+    steps:
+    - uses: actions/checkout@v2
+
+    - run: |
+        git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
+    - name: configure git
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+
+    - uses: frabert/replace-string-action@v1.1
+      id: generate_branch_name
+      with:
+        pattern: 'refs/heads/(.*)'
+        string: "${{ github.event.ref }}"
+        replace-with: '$1-dist'
+
+    - run: |
+        git checkout -b ${{ steps.generate_branch_name.outputs.replaced }}
+        git rm -rf .
+    - uses: actions/download-artifact@v1
+      with:
+        name: dist
+        path: .
+    - run: |
+        git add .
+        git commit -m "Update Build Artefacts"
+        git push origin ${{ steps.generate_branch_name.outputs.replaced }} --force
 
   newmilestone:
     name: generate new milestone
