--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -162,7 +162,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
-          ref: tags/v${{ steps.readfile.outputs.release_version }}
+          ref: v${{ steps.readfile.outputs.release_version }}
 
       # generate the nodejs release dist content
       - name: Use Node.js 12.x
@@ -200,7 +200,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 1
-        ref: tags/v${{ steps.readfile.outputs.release_version }}
+        ref: v${{ steps.readfile.outputs.release_version }}
 
     - run: |
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
