dist flow only on build branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,11 @@
 name: Build Github Action
 on:
   push:
-
+    branches:
+      - "release/rc-**"
+      - "master"
+      - "develop"
+      - "release/**"
 jobs:
   build:
     runs-on: ubuntu-latest
