--- a/.github/workflows/release-finish.yml
+++ b/.github/workflows/release-finish.yml
@@ -26,7 +26,7 @@ jobs:
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
 
     - run: |
-        git rebase master
+        git rebase origin/master
 
     - name: Read Pre Release Version from File
       id: pre_release_version
