update the release content

--- a/.github/workflows/release-finish.yml
+++ b/.github/workflows/release-finish.yml
@@ -6,7 +6,7 @@ on:
       - "master"
 
 jobs:
-  updatenextdev:
+  update_to_next_develop:
     name: Prepare Next Develop Version
     runs-on: ubuntu-latest
     steps:
