--- a/.github/workflows/release-presentation.yml
+++ b/.github/workflows/release-presentation.yml
@@ -1,12 +1,9 @@
-name: Prepare a new Release
 on:
-  pull_request:
+  milestone:
     types: [closed]
-    branches:
-      - "master"
-
+name: Milestone Closure
 jobs:
-  update_release_draft:
+  create_release_draft:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +25,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ steps.packagejson.outputs.content  }}
+        #tag_name: v${{ steps.packagejson.outputs.content  }}
         release_name: Release v${{ steps.packagejson.outputs.content }}
         draft: true
         prerelease: true
