--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -15,5 +15,6 @@ jobs:
       uses: nolte/github-action/utils/changeLog@feature/shasum
       with:
         CHANGELOG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CHANGELOG_GITHUB_PROJECT: "nolte/gh-action-workflow-test"
+        CHANGELOG_GITHUB_PROJECT: "gh-action-workflow-test"
         CHANGELOG_GITHUB_SINCE_TAG: "v0.21.0"
+        CHANGELOG_GITHUB_USER: "nolte"
