--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -15,9 +15,9 @@ jobs:
       uses: nolte/github-action/utils/changeLog@feature/shasum
       with:
         CHANGELOG_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CHANGELOG_GITHUB_PROJECT: "${{ github.repo.repo }}"
+        CHANGELOG_GITHUB_PROJECT: "${{ github.event.repository.name }}"
         CHANGELOG_GITHUB_SINCE_TAG: "v0.21.0"
-        CHANGELOG_GITHUB_USER: "${{ github.repo.owner }}"
+        CHANGELOG_GITHUB_USER: "${{ github.event.repository.owner.login }}"
 
     - name: Read Pre Release Version from File
       id: pre_release_version
