--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -16,13 +16,13 @@ jobs:
       id: latest_release
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
-        #result-encoding: string
+        result-encoding: string
         script: |
           const releases =  await github.repos.getLatestRelease({
             owner: context.repo.owner,
             repo: context.repo.repo
           })
-          return releases
+          return releases.data.tag_name
     - run: |
         echo "${{ steps.latest_release.outputs.result }}"
     - name: Create changelog
