--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
       #- "release/rc-**"
       - "master"
       - "develop"
+    tags:
+      - "v"
 jobs:
   build:
     runs-on: ubuntu-latest
